--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,12 @@ jobs:
     executor: android/android
     steps:
       - checkout
+      - run:
+          name: Set up Java
+          uses: actions/setup-java@v2
+          with:
+            distribution: "temurin"
+            java-version: 17
       - restore_cache:
           key: android-orb-v1-
       - run:
